Resolve SonarCloud maintainability & security issues
- Storage: URL-encode object-path segments (javasecurity:S7044)
- PageRequestUtil: use Math.clamp (java:S6885)
- Reports/Analytics: call transactional sub-reports via injected self
  proxy instead of self-invocation (java:S6809)
- SiteAccessService: drop unnecessary @Transactional on single-read
  checks (removes remaining S6809); document null sentinel (S1168)
- Entities: suppress S2160 (equality is id-based in BaseEntity by design)
- JwtService: suppress S2143 (jjwt API requires java.util.Date)

Deploy-surface issues cleared; test-only style nits and one complexity
smell (UserServiceImpl.patchUser) intentionally left. mvn verify green.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>